--- a/index1.html
+++ b/index1.html
@@ -267,9 +267,9 @@
                     <div class="card-img col-4">
                       <img  height="100" width="100" src="https://a1droptaxi.com/img/suv.png" alt="">
                       <h1 style="color:black;font-size:16px;text-transform: capitalize; text-align: center; " >Dispatcher</h1>
-                      <div class="card-details col-4  d-flex flex-column" id="output5" style="color: #2a4696;">
+                      <div class="card-details col-4  d-flex flex-column" >
    
-                        <div class="d-flex flex-row card-span-size">
+                        <div class="d-flex flex-row card-span-size" id="output5" style="color: #2a4696;">
                           <i style="color: #2a4696;"class="fas fa-road mt-2"><span>1000</span></i> &nbsp;
                           <i style="color: #2a4696;"class="fas fa-rupee-sign mt-2"><span>1000</span></i> &nbsp;
                           <i style="color: #2a4696;"class="fas fa-rupee-sign mt-2"><span>1000</span></i> &nbsp;
