--- a/book-now.html
+++ b/book-now.html
@@ -509,8 +509,8 @@ function Car() {
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNKpr4auBLgBgiOXJ41UUWTB58MZa6p3E&libraries=places"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://spiralgalaxytrs.github.io/droptaxiindia/js/map.js"></script>
-<script src="https://spiralgalaxytrs.github.io/droptaxiindia/js/fast2.js"></script>
+<script src="js/map.js"></script>
+<script src="js/fast2.js"></script>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
  </body>
