--- a/book-now.html
+++ b/book-now.html
@@ -177,7 +177,9 @@
         <div class="form-wrap">
           <label>Car Type</label>
           <select id="cars" name="cars" class="form-control">
+             <option value="PSedan">Premium Sedan</option>
             <option value="Sedan">Sedan</option>
+	    <option value="PSUV">Premium SUV</option>
             <option value="SUV">SUV</option>
             <option value="Traveller">Traveller</option>
           </select>
