--- a/index1.html
+++ b/index1.html
@@ -184,9 +184,9 @@
         <div class="form-wrap">
           <label>Car Type</label>
           <select id="cars" name="cars" class="form-control">
-	    <option value="PSedan">Premium Sedan</option>
+	    <option value="PSedan">Prime Sedan</option>
             <option value="Sedan">Sedan</option>
-	    <option value="PSUV">Premium SUV</option>
+	    <option value="PSUV">Prime SUV</option>
             <option value="SUV">SUV</option>
             <option value="Traveller">Traveller</option>
           </select>
