--- a/bookingSuccess.html
+++ b/bookingSuccess.html
@@ -85,7 +85,7 @@
       <section class="section section-lg" style="background: black;">
         <div class="container">
 		 <h3 style="text-align: center; color: cornsilk;">Booking Confirmed</h3>
-			<div class="row row-50 row-xl-70">
+			<div class="row row-50 row-xl-70" style="margin-bottom:100px;">
                 <img height="404" width="870" class="img-fluid w-100" src="https://i.pinimg.com/originals/70/a5/52/70a552e8e955049c8587b2d7606cd6a6.gif" alt="Post Detail Image">
                 <div class="col-sm-12 col-xl-12 text-center"> 
                     <a class="button button-secondary button-winona wow clipInLeft" href="index.html" data-wow-delay=".1s">Go to Home</a>
